--- a/WordDocumentEmitterWeb/App/Home/Home.html
+++ b/WordDocumentEmitterWeb/App/Home/Home.html
@@ -8,7 +8,6 @@
     <title></title>
     <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
 
-    <link href=" ../../Content/Office.css" rel="stylesheet" type="text/css" />
     <link href="../../Content/fabric.min.css" rel="stylesheet" />
     <link href="../../Content/fabric.components.min.css" rel="stylesheet" />
     <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
@@ -25,16 +24,16 @@
 </head>
 <body>
     <div id="content-header">
-        <div class="padding">
-            <h1>Doc Emitter</h1>
+        <div class="padding ms-font-xl ms-fontWeight-semibold ms-fontColor-white ">
+            <p>Doc Emitter</p>
         </div>
     </div>
     <div id="content-main">
-        <!-- Starting point for this add-in. The UI begins with: -->
+        <!-- The UI begins with: -->
         <!--  a simple message, a drop-down list that the user selects a chunk size from, -->
         <!--  a button for starting the process, and an area that we will write the outcome to.-->
         <!--  All core code for the add-in is in /App/Home/Home.js -->
-        <div class="padding">
+        <div class="padding ms-font-m">
             <div>
                 <p>Please select the size of chunks to use when sending this file for editing:</p>
                 <select id="chunkSize" style="cursor: pointer">
@@ -43,6 +42,7 @@
                     <option value="1048576">1.0 MB</option>
                     <option value="2097152">2.0 MB</option>
                 </select>
+                <br />
                 <br />
                 <button class="ms-Button ms-Button--primary" id="sendData">
                     <span class="ms-Button-label">Publish now!</span>
